2005-02-08  Bruno Haible  <bruno@clisp.org>  (tiny change)

	* src/kwset.h (kwsincr, kwsprep): Change return type to 'const char *'.
	* src/kwset.c (kwsincr, kwsprep): Likewise.

2005-02-08  Arnold D. Robbins  <arnold@skeeve.com>
	    Stepan Kasal  <kasal@ucw.cz>

	* src/mbsupport.h: Don't say the file is part of GAWK.
	Make wording in explanatory comment more generic.

2005-02-07  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c: Document that -X is undocumented.

2005-01-16  Bruno Haible  <bruno@clisp.org>  (tiny change)
	    Stepan Kasal  <kasal@ucw.cz>

	* configure.in: Add tests for iswctype, mbrlen, wcrtomb, wcscoll;
	  use AC_FUNC_MBRTOWC to check for mbrtowc and mbstate_t; move
	  AC_MBSTATE_T below it.
	* src/grep.c: Include mbsupport.h to define MBS_SUPPORT uniformly.
	* src/mbsupport.h: Don't test for HAVE_WCTYPE_T.

2005-01-13  Arnold D. Robbins  <arnold@skeeve.com>

	* src/dfa.c (dfaparse): Use LC_COLLATE whenever it is defined;
	  ENABLE_NLS has nothing to do with this.

2005-01-07  Stepan Kasal  <kasal@ucw.cz>

	* tests/status.sh: Added two tests--option `-s' should have no
	  influence on the exit status.

2004-12-16  Stepan Kasal  <kasal@ucw.cz>

	Cosmetic changes, mostly imported from gawk:

	* src/dfa.c (lexstart): Removed unused variable.
	(parse_bracket_exp_mb): Don't initialize different pointers in one
	  assignment
	(lex): Don't initialize automatic arrays, it's invalid in pre-C89
	  compilers.
	Various other typos.
	* src/dfa.h, src/grep.c, src/search.c: Typos.

2004-12-16  Isamu Hasegawa  <isamuh@jp.ibm.com>

	From http://oss.software.ibm.com/linux/patches/?patch_id=25

	* src/search.c: Patch for i18n correctness.
	* src/grep.c: Likewise.
	* src/dfa.c: Likewise.
	* lib/regex.c: Likewise.

2004-12-15  Julian Foad  <julianfoad@btopenworld.com>

	Changes to documentation and help text, mostly from Stepan Kasal.

	* doc/grep.texi: Minor fixes of phrasing.
	* doc/grep.1: Likewise.
	* src/grep.c: Likewise.

2004-12-01  Stepan Kasal  <kasal@ucw.cz>
