@@ -9,7 +9,7 @@ failures=0
 # checking for a palindrome
 echo "radar" | ${GREP} -e '\(.\)\(.\).\2\1' > /dev/null 2>&1
 if test $? -ne 0 ; then
-        echo "Backref: palindrome, test \#1 failed"
+        echo "Backref: palindrome, test #1 failed"
         failures=1
 fi
 
@@ -17,21 +17,21 @@ fi
 # For now, remove the ``?'' in the last parentheses, so that new glibc can do it.  --Stepan
 echo "civic" | ${GREP} -E -e '^(.?)(.?)(.?)(.?)(.?)(.?)(.?)(.?)(.).?\9\8\7\6\5\4\3\2\1$' > /dev/null 2>&1
 if test $? -ne 0 ; then
-        echo "Options: Bond, test \#2 failed"
+        echo "Options: Bond, test #2 failed"
         failures=1
 fi
 
 # backref are local should be error
 echo "123" | ${GREP} -e 'a\(.\)' -e 'b\1' > /dev/null 2>&1
 if test $? -ne 2 ; then
-	echo "Backref: Backref not local, test \#3 failed"
+	echo "Backref: Backref not local, test #3 failed"
 	failures=1
 fi
 
 # Pattern should fail
 echo "123" | ${GREP} -e '[' -e ']' > /dev/null 2>&1
 if test $? -ne 2 ; then
-	echo "Backref: Compiled not local, test \#3 failed"
+	echo "Backref: Compiled not local, test #4 failed"
 	failures=1
 fi
 
