@@ -1,3 +1,7 @@
+2005-02-23  Julian Foad  <julianfoad@btopenworld.com>
+
+	* tests/backref.sh: Fix trivial typos.
+
 2005-02-08  Bruno Haible  <bruno@clisp.org>  (tiny change)
 
 	* src/kwset.h (kwsincr, kwsprep): Change return type to 'const char *'.
